# Copyright 2023 Buf Technologies, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "runner",
    srcs = ["runner.cc"],
    hdrs = ["runner.h"],
    deps = [
        "//buf/validate:validator",
        "@com_github_bufbuild_protovalidate//proto/protovalidate-testing/buf/validate/conformance/cases:buf_validate_conformance_cases_proto_cc",
        "@com_github_bufbuild_protovalidate//proto/protovalidate-testing/buf/validate/conformance/harness:buf_validate_conformance_harness_proto_cc",
    ],
)

cc_test(
    name = "runner_test",
    srcs = ["runner_test.cc"],
    deps = [
        ":runner",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "runner_main",
    srcs = ["runner_main.cc"],
    deps = [
        ":runner",
        "@com_github_bufbuild_protovalidate//proto/protovalidate-testing/buf/validate/conformance/harness:buf_validate_conformance_harness_proto_cc",
    ],
    data = ["expected_failures.yaml"]
)
