# Copyright 2023 Buf Technologies, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "cel_constraint_rules",
    srcs = ["cel_constraint_rules.cc"],
    hdrs = ["cel_constraint_rules.h"],
    deps = [
        ":constraint_rules",
        "@com_google_cel_cpp//eval/public:activation",
        "@com_google_cel_cpp//eval/public:cel_expression",
        "@com_google_cel_cpp//parser",
    ],
)

cc_library(
    name = "constraint_rules",
    srcs = ["constraint_rules.cc"],
    hdrs = ["constraint_rules.h"],
    deps = [
        "@com_github_bufbuild_protovalidate//proto/protovalidate/buf/validate:validate_proto_cc",
        "@com_google_absl//absl/status",
        "@com_google_cel_cpp//eval/public:cel_value",
        "@com_google_cel_cpp//eval/public/structs:cel_proto_wrapper",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "constraint",
    srcs = ["constraint.cc"],
    hdrs = ["constraint.h"],
    deps = [
        ":cel_constraint_rules",
        ":extra_func",
        "@com_github_bufbuild_protovalidate//proto/protovalidate/buf/validate:validate_proto_cc",
        "@com_google_cel_cpp//eval/public:activation",
        "@com_google_cel_cpp//eval/public:builtin_func_registrar",
        "@com_google_cel_cpp//eval/public:cel_expr_builder_factory",
        "@com_google_cel_cpp//eval/public:cel_expression",
        "@com_google_cel_cpp//eval/public/containers:field_access",
        "@com_google_cel_cpp//eval/public/containers:field_backed_list_impl",
        "@com_google_cel_cpp//eval/public/containers:field_backed_map_impl",
        "@com_google_cel_cpp//eval/public/structs:cel_proto_wrapper",
    ],
)

cc_test(
    name = "constraint_test",
    srcs = ["constraint_test.cc"],
    deps = [
        ":constraint",
        "@com_google_cel_cpp//eval/public:activation",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "extra_func",
    srcs = ["extra_func.cc"],
    hdrs = ["extra_func.h"],
    deps = [
        ":string_format",
        "@com_google_absl//absl/status",
        "@com_google_cel_cpp//eval/public:cel_function_adapter",
        "@com_google_cel_cpp//eval/public:cel_function_registry",
    ],
)

cc_library(
    name = "string_format",
    srcs = ["string_format.cc"],
    hdrs = ["string_format.h"],
    deps = [
        "@com_google_cel_cpp//eval/public:cel_value",
    ],
)

cc_test(
    name = "string_format_test",
    srcs = ["string_format_test.cc"],
    deps = [
        ":string_format",
        "@com_google_googletest//:gtest_main",
    ],
)
