# Copyright 2023-2025 Buf Technologies, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "cel_constraint_rules",
    srcs = ["cel_constraint_rules.cc"],
    hdrs = ["cel_constraint_rules.h"],
    deps = [
        ":constraint_rules",
        "@com_google_cel_cpp//eval/public:activation",
        "@com_google_cel_cpp//eval/public:cel_expression",
        "@com_google_cel_cpp//eval/public:cel_value",
        "@com_google_cel_cpp//eval/public/structs:cel_proto_wrapper",
        "@com_google_cel_cpp//eval/public/containers:field_access",
        "@com_google_cel_cpp//eval/public/containers:field_backed_list_impl",
        "@com_google_cel_cpp//eval/public/containers:field_backed_map_impl",
        "@com_google_cel_cpp//parser",
    ],
)

cc_library(
    name = "proto_field",
    hdrs = ["proto_field.h"],
    deps = [
        "@com_github_bufbuild_protovalidate//proto/protovalidate/buf/validate:validate_proto_cc",
        "@com_google_absl//absl/status",
        "@com_google_cel_cpp//eval/public:cel_value",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "constraint_rules",
    hdrs = ["constraint_rules.h"],
    deps = [
        "@com_github_bufbuild_protovalidate//proto/protovalidate/buf/validate:validate_proto_cc",
        ":proto_field",
        "@com_google_absl//absl/status",
        "@com_google_cel_cpp//eval/public:cel_value",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "cel_rules",
    srcs = ["cel_rules.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_protobuf//:protobuf",
        ":message_factory",
    ],
)

cc_library(
    name = "message_factory",
    srcs = ["message_factory.cc"],
    hdrs = ["message_factory.h"],
    deps = [
        "@com_google_protobuf//:protobuf",
    ]
)

cc_library(
    name = "message_rules",
    srcs = ["message_rules.cc"],
    hdrs = ["message_rules.h"],
    deps = [
        ":field_rules",
        ":message_factory",
        "@com_github_bufbuild_protovalidate//proto/protovalidate/buf/validate:validate_proto_cc",
        "@com_google_absl//absl/status",
        "@com_google_cel_cpp//eval/public:cel_expression",
        "@com_google_cel_cpp//eval/public/structs:cel_proto_wrapper",
    ],
)

cc_library(
    name = "field_rules",
    srcs = ["field_rules.cc"],
    hdrs = ["field_rules.h"],
    deps = [
        ":cel_rules",
        ":constraint",
        "@com_google_absl//absl/status:statusor",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "constraint",
    srcs = ["constraints.cc"],
    hdrs = ["constraints.h"],
    deps = [
        ":cel_constraint_rules",
        ":extra_func",
        "@com_github_bufbuild_protovalidate//proto/protovalidate/buf/validate:validate_proto_cc",
        "@com_google_cel_cpp//eval/public:activation",
        "@com_google_cel_cpp//eval/public:builtin_func_registrar",
        "@com_google_cel_cpp//eval/public:cel_expr_builder_factory",
        "@com_google_cel_cpp//eval/public:cel_expression",
        "@com_google_cel_cpp//eval/public/containers:field_access",
        "@com_google_cel_cpp//eval/public/containers:field_backed_list_impl",
        "@com_google_cel_cpp//eval/public/containers:field_backed_map_impl",
    ],
)

cc_test(
    name = "constraint_test",
    srcs = ["constraints_test.cc"],
    deps = [
        ":constraint",
        "@com_google_cel_cpp//eval/public:activation",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "extra_func",
    srcs = ["extra_func.cc"],
    hdrs = ["extra_func.h"],
    deps = [
        ":string_format",
        "//buf/validate/internal/lib:ipv4",
        "//buf/validate/internal/lib:ipv6",
        "//buf/validate/internal/lib:uri",
        "@com_google_absl//absl/status",
        "@com_google_cel_cpp//eval/public:cel_function_adapter",
        "@com_google_cel_cpp//eval/public:cel_function_registry",
        "@com_google_cel_cpp//eval/public/containers:field_access",
        "@com_google_cel_cpp//eval/public/containers:container_backed_map_impl",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_library(
    name = "string_format",
    srcs = ["string_format.cc"],
    hdrs = ["string_format.h"],
    deps = [
        "@com_google_cel_cpp//eval/public:cel_value",
    ],
)

cc_test(
    name = "string_format_test",
    srcs = ["string_format_test.cc"],
    deps = [
        ":string_format",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "extra_func_test",
    srcs = ["extra_func_test.cc"],
    deps = [
        ":extra_func",
        "@com_google_googletest//:gtest_main",
    ],
)
